--- a/package.json
+++ b/package.json
@@ -21,14 +21,12 @@
   "homepage": "https://github.com/Irina9K/if-js#readme",
   "devDependencies": {
     "eslint": "^8.14.0",
-    "prettier": "2.6.2"
+    "prettier": "2.6.2",
+    "husky": "^7.0.4"
   },
   "husky": {
     "hooks": {
       "pre-commit": "npm run lint"
     }
-  },
-  "dependencies": {
-    "husky": "^7.0.4"
   }
 }
