--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
+    "test": "jest",
     "prettier": "prettier --write *.js",
     "lint": "eslint --debug *.js",
     "lint:write": "eslint --debug *.js --fix",
@@ -22,6 +23,9 @@
   },
   "homepage": "https://github.com/Irina9K/if-js#readme",
   "devDependencies": {
+    "@babel/core": "^7.17.10",
+    "@babel/preset-env": "^7.17.10",
+    "babel-jest": "^28.1.0",
     "eslint": "^8.14.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-jest-enzyme": "^7.1.2",
@@ -33,7 +37,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "husky": "^7.0.4",
-    "jest": "^28.0.3",
+    "jest": "^28.1.0",
     "prettier": "2.6.2"
   },
   "husky": {
